Fix alignment of close button. [fixes #92656738]

--- a/app/styles/document.scss
+++ b/app/styles/document.scss
@@ -102,6 +102,7 @@
 
   .dismiss-alerts {
     float: right;
+    margin-left: 20px;
 
     a {
       color: $white;
